--- a/teachers.html
+++ b/teachers.html
@@ -7,6 +7,7 @@
     <script src="./bootstrap/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="./fontawesome/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/teacher.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Drone Project</title>
@@ -123,5 +124,23 @@
             </div>
         </div>
     </header>
+    <!-- <div class="d-flex flex-column justify-content-center">
+        <div>
+            <img src="./images/PDRC-logo.svg" alt="PDRC" class="logo__teacher">
+        </div>
+    </div> -->
+
+    <div class="d-flex flex-column align-items-center  bg-teacher ">
+        <img 
+            src="./images/PDRC-logo.svg" 
+            alt="PDRC" 
+            class="img-fluid" 
+            style="max-width: 150px; height: auto; margin-top: 2rem; margin-bottom: 7rem;" 
+        />
+        <p class="profess-teacher"><i>ประวัติครูผู้สอน</i></p>
+    </div>
+   
+    <script src="/js/teacher.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
